src/styles.css
* {
  padding: 0;
  margin: 0;
  border: 0;
  box-sizing: border-box;
  list-style: none;
}

body {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;

  width: 250px;
  height: 487px;

  background: #1A001C;
  border: 0.2px solid #440C46;
}

main {
  background: #250327;
  width: 230px;
  height: 416px;
  
  margin: 2px 0 2px 0;
}

#logo {
  height: 32px;
  margin-top: 8px;
}

.main-title {
  font-family: 'Inter';
  font-style: normal;
  font-weight: 400;
  font-size: 13px;
  line-height: 10px;

  color: #F4F4F4;
  margin-left: 9px;
}

#themes {
    max-height: 370px;
    overflow-y: scroll;
}

#themes::-webkit-scrollbar {
  width: 2px;
}

#themes::-webkit-scrollbar-track {
  background: #2F0631;
}

#themes::-webkit-scrollbar-thumb {
  background-color: #440C46;
  border-radius: 15px; 
}

#themes::-webkit-scrollbar-thumb:hover {
  background-color: #6E1870;
}

.theme-box {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;

  height: 123px;
  margin: 2px 9px 10px 9px;
  background: #440C46;
}

.theme-box-header {
  display: flex;
  align-items: center;
  justify-content: center;
}

.theme-title {
  font-family: 'Inter';
  font-style: normal;
  font-weight: 400;
  font-size: 11px;
  line-height: 10px;
  color: #FFFFFF;
}

.theme-title-icon {
  height: 12px;
  position: relative;
  left: 75px;
}

.theme-title-icon:hover {
  opacity: 80%;
}

.theme-img {
  max-width: 200px;
  height: 81px;
  margin: 2px 8px 2px 8px;
}

.theme-button {
  display: flex;
  align-items: center;
  justify-content: center;
  background: #6E1870;
  margin-top: 3px;
  cursor: pointer;
}

.theme-button:hover {
  opacity: 85%;
}

.theme-button-title {
  font-weight: 400;
  font-size: 9px;
  color: #FFFFFF;
  padding: 3px 12px 3px 12px;
}

#github-icon {
  height: 30px;
  margin-bottom: 5px;
}

